--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+    <style>
+        body {
+            margin: 10px;
+            font-family: "Segoe UI VSS (Regular)", "-apple-system", BlinkMacSystemFont, "Segoe UI", sans-serif;
+        }
+    </style>
     <script type="module" src="dist/bundle.js"></script>
 </head>
 
